--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -86,6 +86,7 @@ jobs:
       - name: "Check changes pending"
         working-directory: sdk
         run: |
+          git status --porcelain -- ':(exclude)*gen.properties'
           CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^ || true`
           echo "::set-env name=CHANGES_PENDING::$CHANGES_PENDING"
 
