commit only on master branch

--- a/.github/workflows/postman.yml
+++ b/.github/workflows/postman.yml
@@ -1,8 +1,6 @@
 on:
   - push
-#  push:
-#      branches:
-#        - master
+
 name: Postman collection
 
 jobs:
@@ -45,7 +43,7 @@ jobs:
           echo "::set-env name=CHANGES_PENDING::$CHANGES_PENDING"
 
       - uses: stefanzweifel/git-auto-commit-action@v4
-        if: ${{ env.CHANGES_PENDING != '0' }}
+        if: env.CHANGES_PENDING != '0'  && github.ref == 'refs/heads/master'
         with:
           repository: postman
           commit_message: "TASK: Updating Postman collection"
