--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -91,8 +91,7 @@ jobs:
           echo "::set-env name=CHANGES_PENDING::$CHANGES_PENDING"
 
       - uses: stefanzweifel/git-auto-commit-action@v4
-        if: env.changes_pending != '0'
-        #github.ref == 'refs/heads/master' &&
+        if: env.changes_pending != '0' && github.ref == 'refs/heads/master'
         with:
           repository: sdk
           branch: develop
