combine postman and SDK workflow

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -69,7 +69,7 @@ jobs:
         run: yarn run oas_convert
 
       - name: "Generate postman collection"
-        run: rmf-codegen generate -o postman -t postman /api/postman.raml
+        run: rmf-codegen generate -o postman -t postman postman.raml
 
       - name: "clean postman folder"
         run: git checkout -- postman/connection_settings.png postman/gen.properties
