--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -38,9 +38,6 @@ jobs:
           restore-keys: |
             php${{ matrix.php-version }}-composer-
 
-      - name: "Install codegen"
-        run: export VRAP_VERSION=1.0.0-20200716101307 && curl -o- -s https://raw.githubusercontent.com/vrapio/rmf-codegen/master/scripts/install.sh | bash
-
       - name: "Checkout api reference"
         uses: actions/checkout@v2
         with:
@@ -54,41 +51,11 @@ jobs:
           ref: develop
           ssh-key: ${{ secrets.SDK_DEPLOY_KEY }}
 
-      - name: "Generate Base files"
-        run: rmf-codegen generate -o sdk/lib/commercetools-base -t PHP_BASE -b "commercetools" api/update-actions.raml
-
-      - name: "Generate PHP SDK"
-        run: rmf-codegen generate -o sdk/lib/commercetools-api -t PHP_CLIENT -s "commercetools" -b "commercetools/api" api/update-actions.raml
-
-      - name: "Install dependencies with composer"
+      - run: make build check_pending
         working-directory: sdk
-        run: composer install --no-ansi --no-interaction --no-progress --no-suggest
-
-      - name: "Run tests to check for BC issue"
-        working-directory: sdk
-        run: vendor/bin/phpunit --testsuite=unit
-
-      - name: "Generate PHP SDK Tests"
-        run: rmf-codegen generate -o sdk/lib/commercetools-api-tests -t PHP_TEST -s "commercetools" -b "commercetools/api" api/update-actions.raml
-
-      - name: "Prettify"
-        working-directory: sdk
-        run: ./prettify.sh
-
-      - name: "Run static analysis"
-        working-directory: sdk
-        run: vendor/bin/psalm --threads=2
-
-      - name: "Run tests"
-        working-directory: sdk
-        run: vendor/bin/phpunit --testsuite=unit
-
-      - name: "Check changes pending"
-        working-directory: sdk
-        run: |
-          git status --porcelain -- ':(exclude)*gen.properties'
-          CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^ || true`
-          echo "::set-env name=CHANGES_PENDING::$CHANGES_PENDING"
+        env:
+          - RAML_DIR: ../api/update_actions.raml
+          - LIB_NAME: "api"
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         if: env.changes_pending != '0' && github.ref == 'refs/heads/master'
