--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -54,8 +54,8 @@ jobs:
       - run: make build check_pending
         working-directory: sdk
         env:
-          - RAML_DIR: ../api/update_actions.raml
-          - LIB_NAME: "api"
+          RAML_DIR: ../api/update_actions.raml
+          LIB_NAME: "api"
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         if: env.changes_pending != '0' && github.ref == 'refs/heads/master'
