--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -54,7 +54,7 @@ jobs:
       - run: make build check_pending
         working-directory: sdk
         env:
-          RAML_DIR: ../api/update_actions.raml
+          RAML_FILE: ../api/update_actions.raml
           LIB_NAME: "api"
 
       - uses: stefanzweifel/git-auto-commit-action@v4
