--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -51,10 +51,10 @@ jobs:
           ref: develop
           ssh-key: ${{ secrets.SDK_DEPLOY_KEY }}
 
-      - run: make build check_pending
+      - run: make debug_info build check_pending
         working-directory: sdk
         env:
-          RAML_FILE: ../api/update_actions.raml
+          RAML_FILE: "../api/update_actions.raml"
           LIB_NAME: "api"
 
       - uses: stefanzweifel/git-auto-commit-action@v4
