--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -3,6 +3,9 @@ on:
 
 name: "SDKs"
 
+env:
+  VRAP_VERSION: 1.0.0-20200716101307
+
 jobs:
 
   php:
@@ -51,10 +54,10 @@ jobs:
           ref: develop
           ssh-key: ${{ secrets.SDK_DEPLOY_KEY }}
 
-      - run: make debug_info build check_pending
+      - run: make build check_pending
         working-directory: sdk
         env:
-          RAML_FILE: "../api/update_actions.raml"
+          RAML_FILE: "../api/update-actions.raml"
           LIB_NAME: "api"
 
       - uses: stefanzweifel/git-auto-commit-action@v4
@@ -80,9 +83,6 @@ jobs:
         with:
           java-version: '13'
 
-      - name: "Install codegen"
-        run: sudo chmod 777 /usr/local/bin && export VRAP_VERSION=1.0.0-20200716101307 && curl -o- -s https://raw.githubusercontent.com/vrapio/rmf-codegen/master/scripts/install.sh | bash
-
       - name: "Checkout api reference"
         uses: actions/checkout@v2
         with:
@@ -96,14 +96,11 @@ jobs:
           ssh-key: ${{ secrets.POSTMAN_DEPLOY_KEY }}
 
       - name: "Generate postman collection"
-        run: rmf-codegen generate -o postman/api -t postman api/postman.raml
-
-      - name: "Check changes pending"
+        run: sudo chmod 777 /usr/local/bin && make build check_pending
         working-directory: postman
-        run: |
-          git status --porcelain -- ':(exclude)*gen.properties'
-          CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^ || true`
-          echo "::set-env name=CHANGES_PENDING::$CHANGES_PENDING"
+        env:
+          RAML_FILE: "../api/postman.raml"
+          LIB_NAME: "api"
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         if: env.CHANGES_PENDING != '0'  && github.ref == 'refs/heads/master'
