update workflow env

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -57,8 +57,7 @@ jobs:
       - run: make build check_pending
         working-directory: sdk
         env:
-          RAML_FILE: "../api/update-actions.raml"
-          LIB_NAME: "api"
+          API_RAML: "../api/update-actions.raml"
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         if: env.changes_pending != '0' && github.ref == 'refs/heads/master'
