fix postman workflow

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -93,7 +93,7 @@ jobs:
           ssh-key: ${{ secrets.POSTMAN_DEPLOY_KEY }}
 
       - name: "Generate postman collection"
-        run: sudo chmod 777 /usr/local/bin && make RAML_FILE="../api/postman.raml" build check_pending
+        run: sudo chmod 777 /usr/local/bin && make RAML_FILE="../api/postman.raml" LIB_NAME="api" build check_pending
         working-directory: postman
 
       - uses: stefanzweifel/git-auto-commit-action@v4
