simplify ci workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,13 +20,4 @@ jobs:
         with:
           node-version: '12'
 
-      - run: yarn install
-
-      - name: "Check markdown"
-        run: node bin/explode-raml.js
-
-      - name: "Lint RAML"
-        run: yarn run lint:raml
-
-      - name: "Validate RAML"
-        run: docker run -v$(pwd):/api vrapio/vrap -rc /api/update-actions.raml
+      - run: make lint
