--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,4 +20,4 @@ jobs:
         with:
           node-version: '12'
 
-      - run: make lint
+      - run: sudo chmod 777 /usr/local/bin && make lint
