fix commit glob

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -51,7 +51,7 @@ jobs:
         if: env.CHANGES_PENDING != '0'
         with:
           commit_message: "TASK: Updating RAML types, Postman and OAS definition"
-          file_pattern: types/*.raml api.swagger.json api.swagger3.json postman/*
+          file_pattern: types/**/*.raml api.swagger.json api.swagger3.json postman/*
           commit_user_name: Auto Mation
           commit_user_email: automation@commercetools.com
           commit_author: Auto Mation <automation@commercetools.com>
