--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -48,7 +48,6 @@ jobs:
         with:
           repository: 'commercetools/commercetools-php-sdk-v2'
           path: sdk
-          ref: develop
           ssh-key: ${{ secrets.SDK_DEPLOY_KEY }}
 
       - run: make build_api_sdk check_pending
@@ -60,7 +59,6 @@ jobs:
         if: env.CHANGES_PENDING != '0' && github.ref == 'refs/heads/master'
         with:
           repository: sdk
-          branch: develop
           commit_message: "TASK: Updating SDK"
           commit_user_name: Auto Mation
           commit_user_email: automation@commercetools.com
@@ -103,6 +101,46 @@ jobs:
         with:
           repository: postman
           commit_message: "TASK: Updating Postman collection"
+          commit_user_name: Auto Mation
+          commit_user_email: automation@commercetools.com
+          commit_author: Auto Mation <automation@commercetools.com>
+
+  java:
+    name: "Generate Java SDK"
+
+    runs-on: ubuntu-latest
+    continue-on-error: true
+
+    steps:
+      - name: "Install Java"
+        uses: actions/setup-java@v1
+        with:
+          java-version: '13'
+
+      - name: "Checkout api reference"
+        uses: actions/checkout@v2
+        with:
+          path: api
+
+      - name: "Checkout Java SDK"
+        uses: actions/checkout@v2
+        with:
+          repository: 'commercetools/commercetools-java-sdks'
+          path: sdk
+          ref: develop
+          ssh-key: ${{ secrets.JAVA_SDK_DEPLOY_KEY }}
+
+      - run: make build_api_sdk check_pending
+        working-directory: sdk
+        env:
+          RAML_FILE: "../api/update-actions.raml"
+
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        if: env.CHANGES_PENDING != '0' && github.ref == 'refs/heads/master'
+        with:
+          repository: sdk
+          branch: develop
+          commit_message: "TASK: Updating SDK"
           commit_user_name: Auto Mation
           commit_user_email: automation@commercetools.com
           commit_author: Auto Mation <automation@commercetools.com>
