--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -130,7 +130,8 @@ jobs:
           ref: develop
           ssh-key: ${{ secrets.JAVA_SDK_DEPLOY_KEY }}
 
-      - run: make build_api_sdk check_pending
+      - name: "Generate Java SDK"
+        run: sudo chmod 777 /usr/local/bin && make build_api_sdk check_pending
         working-directory: sdk
         env:
           RAML_FILE: "../api/update-actions.raml"
