--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -143,3 +143,42 @@ jobs:
           commit_user_name: Auto Mation
           commit_user_email: automation@commercetools.com
           commit_author: Auto Mation <automation@commercetools.com>
+
+  typescript:
+    name: "Generate Typescript SDK"
+
+    runs-on: ubuntu-latest
+    continue-on-error: true
+
+    steps:
+      - name: "Install node"
+        uses: actions/setup-node@v2
+        with:
+          node-version: '12'
+
+      - name: "Checkout api reference"
+        uses: actions/checkout@v2
+        with:
+          path: api
+
+      - name: "Checkout Typescript SDK"
+        uses: actions/checkout@v2
+        with:
+          repository: 'commercetools/commercetools-sdk-typescript'
+          path: sdk
+          ssh-key: ${{ secrets.TS_SDK_DEPLOY_KEY }}
+
+      - name: "Generate Typescript SDK"
+        run: sudo chmod 777 /usr/local/bin && make build_api_sdk check_pending
+        working-directory: sdk
+        env:
+          RAML_FILE: "../api/update-actions.raml"
+
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        if: env.CHANGES_PENDING != '0' && github.ref == 'refs/heads/master'
+        with:
+          repository: sdk
+          commit_message: "TASK: Updating Platform SDK"
+          commit_user_name: Auto Mation
+          commit_user_email: automation@commercetools.com
+          commit_author: Auto Mation <automation@commercetools.com>
