push SDKs with branch specified

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -60,6 +60,7 @@ jobs:
         if: env.CHANGES_PENDING != '0' && github.ref == 'refs/heads/master'
         with:
           repository: sdk
+          branch: master
           commit_message: "TASK: Updating SDK"
           commit_user_name: Auto Mation
           commit_user_email: automation@commercetools.com
@@ -102,6 +103,7 @@ jobs:
         if: env.CHANGES_PENDING != '0'  && github.ref == 'refs/heads/master'
         with:
           repository: postman
+          branch: master
           commit_message: "TASK: Updating Postman collection"
           commit_user_name: Auto Mation
           commit_user_email: automation@commercetools.com
@@ -142,6 +144,7 @@ jobs:
         if: env.CHANGES_PENDING != '0' && github.ref == 'refs/heads/master'
         with:
           repository: sdk
+          branch: master
           commit_message: "TASK: Updating SDK"
           commit_user_name: Auto Mation
           commit_user_email: automation@commercetools.com
@@ -187,6 +190,7 @@ jobs:
         if: env.CHANGES_PENDING != '0' && github.ref == 'refs/heads/master'
         with:
           repository: sdk
+          branch: master
           commit_message: "TASK: Updating Platform SDK"
           commit_user_name: Auto Mation
           commit_user_email: automation@commercetools.com
