--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -51,10 +51,13 @@ jobs:
           ssh-key: ${{ secrets.SDK_DEPLOY_KEY }}
           ref: master
 
-      - run: make build_api_sdk check_pending
+      - run: make build_api_sdk
         working-directory: sdk
         env:
           RAML_FILE: "../api/update-actions.raml"
+
+      - name: "check pending changes"
+        run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         if: env.CHANGES_PENDING != '0' && github.ref == 'refs/heads/master'
@@ -93,11 +96,14 @@ jobs:
           ref: master
 
       - name: "Generate postman collection"
-        run: sudo chmod 777 /usr/local/bin && make build check_pending
+        run: sudo chmod 777 /usr/local/bin && make build
         working-directory: postman
         env:
           RAML_FILE: "../api/postman.raml"
           LIB_NAME: "api"
+
+      - name: "check pending changes"
+        run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         if: env.CHANGES_PENDING != '0'  && github.ref == 'refs/heads/master'
@@ -135,10 +141,13 @@ jobs:
           ref: master
 
       - name: "Generate Java SDK"
-        run: sudo chmod 777 /usr/local/bin && make build_api_sdk check_pending
+        run: sudo chmod 777 /usr/local/bin && make build_api_sdk
         working-directory: sdk
         env:
           RAML_FILE: "../api/update-actions.raml"
+
+      - name: "check pending changes"
+        run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         if: env.CHANGES_PENDING != '0' && github.ref == 'refs/heads/master'
@@ -181,10 +190,13 @@ jobs:
           ref: master
 
       - name: "Generate Typescript SDK"
-        run: sudo chmod 777 /usr/local/bin && make build_api_sdk check_pending
+        run: sudo chmod 777 /usr/local/bin && make build_api_sdk
         working-directory: sdk
         env:
           RAML_FILE: "../api/update-actions.raml"
+
+      - name: "check pending changes"
+        run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         if: env.CHANGES_PENDING != '0' && github.ref == 'refs/heads/master'
