--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -45,7 +45,10 @@ jobs:
           restore-keys: |
             php${{ matrix.php-version }}-composer-
 
-      - run: sudo chmod 777 /usr/local/bin && make build check_pending
+      - run: sudo chmod 777 /usr/local/bin && make build
+
+      - name: "check pending changes"
+        run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         if: env.CHANGES_PENDING != '0'
