adjust auto generating csharp sdk to push changes to master branch

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -249,10 +249,10 @@ jobs:
         working-directory: sdk
 
       - uses: stefanzweifel/git-auto-commit-action@v4
-        if: env.CHANGES_PENDING != '0'
+        if: env.CHANGES_PENDING != '0' && github.ref == 'refs/heads/master'
         with:
           repository: sdk
-          branch: develop
+          branch: master
           commit_message: "TASK: Updating SDK"
           commit_user_name: Auto Mation
           commit_user_email: automation@commercetools.com
