--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@apidevtools/swagger-cli": "^4.0.4",
     "markdownlint": "^0.7.0",
     "oas-raml-converter": "^1.1.27",
+    "prettier": "^1.19.1",
     "raml-1-parser": "^1.1.40",
-    "traverse": "^0.6.6",
-    "prettier": "^1.19.1"
+    "traverse": "^0.6.6"
   },
   "scripts": {
     "format:raml": "prettier --write '**/*.raml'",
     "lint:raml": "prettier -c '**/*.raml'",
-    "oas_convert": "node bin/oas-convert.js"
+    "oas_convert": "node bin/oas-convert.js",
+    "swagger-cli": "swagger-cli"
   },
   "private": true,
   "license": "MIT"
