--- a/examples/product-projections-search.example.json
+++ b/examples/product-projections-search.example.json
@@ -2,6 +2,7 @@
   "offset": 0,
   "count": 2,
   "total": 2,
+  "limit": 0,
   "results": [
     {
       "id": "080feded-4f74-4d31-9309-f7ef6b7f1279",
