--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -52,10 +52,11 @@ jobs:
           ssh-key: ${{ secrets.SDK_DEPLOY_KEY }}
           ref: master
 
-      - run: make build_api_sdk
+      - run: make codegen_install generate_base gen_api_sdk gen_import_sdk prettify analyse test_api
         working-directory: sdk
         env:
-          RAML_FILE: "../api/api-specs/api/update-actions.raml"
+          API_RAML: "../api/api-specs/api/update-actions.raml"
+          IMPORT_RAML: "../api/api-specs/importapi/api.raml"
 
       - name: "check pending changes"
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
@@ -97,12 +98,19 @@ jobs:
           ssh-key: ${{ secrets.POSTMAN_DEPLOY_KEY }}
           ref: master
 
-      - name: "Generate postman collection"
+      - name: "Generate api postman collection"
         run: sudo chmod 777 /usr/local/bin && make build
         working-directory: postman
         env:
           RAML_FILE: "../api/api-specs/api/postman.raml"
           LIB_NAME: "api"
+
+      - name: "Generate importapi postman collection"
+        run: sudo chmod 777 /usr/local/bin && make build
+        working-directory: postman
+        env:
+          RAML_FILE: "../api/api-specs/importapi/api.raml"
+          LIB_NAME: "import"
 
       - name: "check pending changes"
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
@@ -144,10 +152,11 @@ jobs:
           ref: master
 
       - name: "Generate Java SDK"
-        run: sudo chmod 777 /usr/local/bin && make build_api_sdk
+        run: sudo chmod 777 /usr/local/bin && make build_api_sdk build_import_sdk
         working-directory: sdk
         env:
-          RAML_FILE: "../api/api-specs/api/update-actions.raml"
+          API_RAML: "../api/api-specs/api/update-actions.raml"
+          IMPORT_RAML: "../api/api-specs/importapi/api.raml"
 
       - name: "check pending changes"
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
@@ -194,10 +203,11 @@ jobs:
           ref: master
 
       - name: "Generate Typescript SDK"
-        run: sudo chmod 777 /usr/local/bin && make build_api_sdk
+        run: sudo chmod 777 /usr/local/bin && make build_api_sdk build_import_sdk
         working-directory: sdk
         env:
-          RAML_FILE: "../api/api-specs/api/update-actions.raml"
+          API_RAML: "../api/api-specs/api/update-actions.raml"
+          IMPORT_RAML: "../api/api-specs/importapi/api.raml"
 
       - name: "check pending changes"
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
