--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -47,7 +47,7 @@ jobs:
           restore-keys: |
             php${{ matrix.php-version }}-composer-
 
-      - run: sudo chmod 777 /usr/local/bin && make build
+      - run: sudo chmod 777 /usr/local/bin && make -j2 build
 
       - name: "check pending changes"
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
