--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -48,12 +48,13 @@ jobs:
           ssh-key: ${{ secrets.SDK_DEPLOY_KEY }}
           ref: master
 
-      - run: make codegen_install generate_base gen_api_sdk gen_import_sdk prettify analyse test_api
+      - run: make -j2 build
         working-directory: sdk
         env:
           RAML_FILE: "../api/api-specs/api/update-actions.raml"
           API_RAML: "../api/api-specs/api/update-actions.raml"
           IMPORT_RAML: "../api/api-specs/importapi/api.raml"
+          ML_RAML: "../api/api-specs/ml/api.raml"
 
       - name: "check pending changes"
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
