--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -150,11 +150,12 @@ jobs:
           ref: master
 
       - name: "Generate Java SDK"
-        run: sudo chmod 777 /usr/local/bin && make build_api_sdk build_import_sdk
+        run: sudo chmod 777 /usr/local/bin && make build
         working-directory: sdk
         env:
           API_RAML: "../api/api-specs/api/update-actions.raml"
           IMPORT_RAML: "../api/api-specs/importapi/api.raml"
+          ML_RAML: "../api/api-specs/ml/api.raml"
 
       - name: "check pending changes"
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
@@ -201,11 +202,12 @@ jobs:
           ref: master
 
       - name: "Generate Typescript SDK"
-        run: sudo chmod 777 /usr/local/bin && make build_api_sdk build_import_sdk
+        run: sudo chmod 777 /usr/local/bin && make build
         working-directory: sdk
         env:
           API_RAML: "../api/api-specs/api/update-actions.raml"
           IMPORT_RAML: "../api/api-specs/importapi/api.raml"
+          ML_RAML: "../api/api-specs/ml/api.raml"
 
       - name: "check pending changes"
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
