fix warning for auto-commit

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -56,7 +56,7 @@ jobs:
         if: env.CHANGES_PENDING != '0'
         with:
           commit_message: "TASK: Updating RAML types, Postman and OAS definition"
-          file_pattern: api-specs/api/types/**/*.raml api-specs/api/types/*.raml api.swagger.json api.swagger3.json postman/* oas/*
+          file_pattern: api-specs/api/types/**/*.raml api-specs/api/types/*.raml api.swagger.json api.swagger3.json postman oas
           commit_user_name: Auto Mation
           commit_user_email: automation@commercetools.com
           commit_author: Auto Mation <automation@commercetools.com>
