--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -47,7 +47,10 @@ jobs:
           restore-keys: |
             php${{ matrix.php-version }}-composer-
 
+      - run: sudo chmod 777 /usr/local/bin && make -j2 generate lint
+        if: github.ref != 'refs/heads/master'
       - run: sudo chmod 777 /usr/local/bin && make -j2 build
+        if: github.ref == 'refs/heads/master'
 
       - name: "check pending changes"
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
@@ -56,7 +59,7 @@ jobs:
         if: env.CHANGES_PENDING != '0'
         with:
           commit_message: "TASK: Updating RAML types, Postman and OAS definition"
-          file_pattern: api-specs/api/types/**/*.raml api-specs/api/types/*.raml api.swagger.json api.swagger3.json postman oas
+          file_pattern: api-specs/api/types/**/*.raml api-specs/api/types/*.raml api.swagger.json api.swagger3.json oas
           commit_user_name: Auto Mation
           commit_user_email: automation@commercetools.com
           commit_author: Auto Mation <automation@commercetools.com>
