--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -249,10 +249,12 @@ jobs:
           ref: master
 
       - name: "Generate Csharp SDK"
-        run: sudo chmod 777 /usr/local/bin && make build_api_sdk
+        run: sudo chmod 777 /usr/local/bin && make build
         working-directory: sdk
         env:
-          RAML_FILE: "../api/api-specs/api/update-actions.raml"
+          API_RAML: "../api/api-specs/api/update-actions.raml"
+          IMPORT_RAML: "../api/api-specs/importapi/api.raml"
+          ML_RAML: "../api/api-specs/ml/api.raml"
 
       - name: "check pending changes"
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
