--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,9 +2,9 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - master
+      - 'master'
     tags:
-      - *
+      - '*'
 
 name: Docker
 
