remove legacy update-actions.raml

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -51,8 +51,8 @@ jobs:
       - run: make -j2 build
         working-directory: sdk
         env:
-          RAML_FILE: "../api/api-specs/api/update-actions.raml"
-          API_RAML: "../api/api-specs/api/update-actions.raml"
+          RAML_FILE: "../api/api-specs/api/api.raml"
+          API_RAML: "../api/api-specs/api/api.raml"
           IMPORT_RAML: "../api/api-specs/importapi/api.raml"
           ML_RAML: "../api/api-specs/ml/api.raml"
 
@@ -153,7 +153,7 @@ jobs:
         run: sudo chmod 777 /usr/local/bin && make build
         working-directory: sdk
         env:
-          API_RAML: "../api/api-specs/api/update-actions.raml"
+          API_RAML: "../api/api-specs/api/api.raml"
           IMPORT_RAML: "../api/api-specs/importapi/api.raml"
           ML_RAML: "../api/api-specs/ml/api.raml"
 
@@ -205,7 +205,7 @@ jobs:
         run: sudo chmod 777 /usr/local/bin && make build
         working-directory: sdk
         env:
-          API_RAML: "../api/api-specs/api/update-actions.raml"
+          API_RAML: "../api/api-specs/api/api.raml"
           IMPORT_RAML: "../api/api-specs/importapi/api.raml"
           ML_RAML: "../api/api-specs/ml/api.raml"
 
@@ -252,7 +252,7 @@ jobs:
         run: sudo chmod 777 /usr/local/bin && make build
         working-directory: sdk
         env:
-          API_RAML: "../api/api-specs/api/update-actions.raml"
+          API_RAML: "../api/api-specs/api/api.raml"
           IMPORT_RAML: "../api/api-specs/importapi/api.raml"
           ML_RAML: "../api/api-specs/ml/api.raml"
 
