--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -55,6 +55,7 @@ jobs:
           API_RAML: "../api/api-specs/api/api.raml"
           IMPORT_RAML: "../api/api-specs/importapi/api.raml"
           ML_RAML: "../api/api-specs/ml/api.raml"
+          HISTORY_RAML: "../api/api-specs/history/api.raml"
 
       - name: "check pending changes"
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
