--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -154,9 +154,11 @@ jobs:
         run: sudo chmod 777 /usr/local/bin && make build
         working-directory: sdk
         env:
+          RAML_FILE: "../api/api-specs/api/api.raml"
           API_RAML: "../api/api-specs/api/api.raml"
           IMPORT_RAML: "../api/api-specs/importapi/api.raml"
           ML_RAML: "../api/api-specs/ml/api.raml"
+          HISTORY_RAML: "../api/api-specs/history/api.raml"
 
       - name: "check pending changes"
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
@@ -206,9 +208,11 @@ jobs:
         run: sudo chmod 777 /usr/local/bin && make build
         working-directory: sdk
         env:
+          RAML_FILE: "../api/api-specs/api/api.raml"
           API_RAML: "../api/api-specs/api/api.raml"
           IMPORT_RAML: "../api/api-specs/importapi/api.raml"
           ML_RAML: "../api/api-specs/ml/api.raml"
+          HISTORY_RAML: "../api/api-specs/history/api.raml"
 
       - name: "check pending changes"
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
@@ -253,9 +257,11 @@ jobs:
         run: sudo chmod 777 /usr/local/bin && make build
         working-directory: sdk
         env:
+          RAML_FILE: "../api/api-specs/api/api.raml"
           API_RAML: "../api/api-specs/api/api.raml"
           IMPORT_RAML: "../api/api-specs/importapi/api.raml"
           ML_RAML: "../api/api-specs/ml/api.raml"
+          HISTORY_RAML: "../api/api-specs/history/api.raml"
 
       - name: "check pending changes"
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
