create gen-sdk branch for php sdk

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -61,6 +61,7 @@ jobs:
         run: echo "CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^`" >> $GITHUB_ENV
         working-directory: commercetools-php-sdk-v2
 
+      - run: git switch -C gen-sdk-updates
       - uses: stefanzweifel/git-auto-commit-action@v4
         if: env.CHANGES_PENDING != '0' && github.ref == 'refs/heads/master'
         with:
