--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,8 +1,8 @@
 on:
-  - push
-      paths:
-        - 'api-specs/**'
-  - workflow_dispatch
+  push:
+    paths:
+      - 'api-specs/**'
+  workflow_dispatch:
 
 name: Update RAML
 
