--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -64,6 +64,7 @@ jobs:
         working-directory: commercetools-php-sdk-v2
 
       - run: git switch -C gen-sdk-updates
+        working-directory: commercetools-php-sdk-v2
       - uses: stefanzweifel/git-auto-commit-action@v4
         if: env.CHANGES_PENDING != '0' && github.ref == 'refs/heads/master'
         with:
