--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -149,9 +149,8 @@ jobs:
           repository: 'commercetools/commercetools-sdk-java-v2'
           path: commercetools-sdk-java-v2
           ssh-key: ${{ secrets.JAVA_SDK_DEPLOY_KEY }}
-          fetch-depth: 0
 
-      - run: git checkout -B gen-sdk-updates
+      - run: git checkout -B gen-sdk-updates origin/gen-sdk-updates
         working-directory: commercetools-sdk-java-v2
 
       - name: "Generate Java SDK"
