test update without force push

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -150,6 +150,9 @@ jobs:
           path: commercetools-sdk-java-v2
           ssh-key: ${{ secrets.JAVA_SDK_DEPLOY_KEY }}
 
+      - run: git fetch origin gen-sdk-updates
+        working-directory: commercetools-sdk-java-v2
+
       - run: git checkout -B gen-sdk-updates origin/gen-sdk-updates
         working-directory: commercetools-sdk-java-v2
 
