test update without force push

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -151,8 +151,8 @@ jobs:
           ssh-key: ${{ secrets.JAVA_SDK_DEPLOY_KEY }}
 
       - run: |
-          git fetch origin gen-sdk-updates
-          git checkout -B gen-sdk-updates origin/gen-sdk-updates
+          git fetch --depth=1 origin gen-sdk-updates || true
+          git checkout gen-sdk-updates
         working-directory: commercetools-sdk-java-v2
 
       - name: "Generate Java SDK"
