test update without force push

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -152,7 +152,7 @@ jobs:
 
       - run: |
           git fetch --depth=1 origin gen-sdk-updates || true
-          git checkout gen-sdk-updates
+          git checkout -b gen-sdk-updates
         working-directory: commercetools-sdk-java-v2
 
       - name: "Generate Java SDK"
