test update without force push

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -153,6 +153,7 @@ jobs:
       - run: |
           git fetch --depth=1 origin gen-sdk-updates || true
           git checkout -b gen-sdk-updates
+          git log -1
         working-directory: commercetools-sdk-java-v2
 
       - name: "Generate Java SDK"
