--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -152,7 +152,8 @@ jobs:
 
       - run: |
           git fetch --depth=1 origin gen-sdk-updates || true
-          git checkout -b gen-sdk-updates
+          git checkout -B gen-sdk-updates origin/gen-sdk-updates || true
+          git checkout -B gen-sdk-updates
           git log -1
         working-directory: commercetools-sdk-java-v2
 
